Projects/C Minus Compiler/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.util.*;

/** Compiler.jj defines grammar and can parse a .c file. When this file is compiled with jcc, it will create
* Compiler.java, CompilerConstants.java, CompilerTokenManager.java, ParseException.java, SimpleCharStream.java,
* Token.java, and TokenMgrError.java
*/

public class Parser implements ParserConstants {
        public static ArrayList<SyntaxToken> tokenList = new ArrayList<SyntaxToken>();
        public static Node root = new Node();

        public Parser() {
                ;
        }

        private static void printSuccess(){
                System.out.println("Input Parsed Successfully!");
        }

        private static void printTokens(){
                for(SyntaxToken tok : tokenList){
                        System.out.println(tok.toString());
                }
        }


        //Prints Abstract Syntax Tree from the root node
        private static void printParseTree(Node node, int height){
                int i;
                for(i = 0; i < height; i++) {
                        System.out.print("\u005ct");
                }
                if(height != 0){
                        System.out.println("-------- " + node.getPayload());
                } else {
                        System.out.println(node.getPayload());
                }
                for(Node n : node.children) {
                        for(i = 0; i < height + 1; i++) {
                                System.out.print("\u005ct");
                        }
                        System.out.println("|");

                        printParseTree(n, height + 1);
                }
        }

    // Run the parser
        public static Node run(boolean tokenBool, boolean fileSet, String fileName) {
        Parser parser;

                /*boolean tokenBool = false;
		boolean parseTreeBool = false;
		boolean fileSet = false;
		String fileName = null;


		for(String s : args){
			if(s.equals("-t")){
				tokenBool = true;
			} else if (s.equals("-pt")){
				parseTreeBool = true;
			} else if (!fileSet){
				fileName = s;
				fileSet = true;
			} else {
				System.out.println("Error: More than one file passed as argument.");
				return;
			}
		}*/

                //Mostly for easy debugging, may not be in final version
                if(!fileSet){
                        System.out.println("C Parser:  Reading from standard input . . .");
                        parser = new Parser(System.in);
                }

                else if(fileSet){
                        System.out.println("C Parser:  Reading from file " + fileName + " . . ." );
                        try {
                                parser = new Parser(new java.io.FileInputStream(fileName));
                        }
                        catch(java.io.FileNotFoundException e){
                                System.out.println("C Parser:  File " + fileName + " not found.");
                                return null;
                        }
                } else {
                        System.out.println("Compiler:  Usage is one of:");
                        System.out.println("         java Compiler [-t] [-pt] [fileName]");
                        return null;
                }
                try {
                        parser.Program();
                        if(tokenBool){
                                printTokens();
                        }
                        System.out.println("Compiler:  C program parsed successfully.");
                }
                catch(ParseException e){
                        System.out.println("Compiler:  Encountered errors during parse.");
                        e.printStackTrace();
                }
                        return root;
        }

// Rule defining a program, sets root of ast and prints success message upon return
  static final public void Program() throws ParseException {
         root.setPayload("Program");
    label_1:
    while (true) {
      DeclarationList(root);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case VOID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
         printSuccess();
  }

// A program is a list of declarations
  static final public void DeclarationList(Node parent) throws ParseException {
    label_2:
    while (true) {
      Declaration(parent);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case VOID:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
    }
  }

// A declaration is a variable or function
  static final public void Declaration(Node parent) throws ParseException {
    if (jj_2_1(2147483647)) {
      VarDeclaration(parent);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case VOID:
        FuncDeclaration(parent);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// Variables are declared by a type and identifier
  static final public void VarDeclaration(Node parent) throws ParseException {
                                    Token i; Token s;
                Node child = new Node(parent, "");
                parent.addChild(child);
    TypeSpecifier(child);
    i = jj_consume_token(IDENTIFIER);
    s = jj_consume_token(28);
                child.setPayload(i.image);
                tokenList.add(new SyntaxToken("IDENTIFIER", i.image));
                tokenList.add(new SyntaxToken("SEMICOLON", s.image));
  }

// A type is int or void
  static final public void TypeSpecifier(Node parent) throws ParseException {
                                   Token i; Token v;
                Node child = new Node(parent, "");
                parent.addChild(child);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      i = jj_consume_token(INT);
                child.setPayload(i.image);
                tokenList.add(new SyntaxToken("TYPE_SPECIFIER", i.image));
      break;
    case VOID:
      v = jj_consume_token(VOID);
                child.setPayload(v.image);
                tokenList.add(new SyntaxToken("TYPE_SPECIFIER", v.image));
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// A function has a type, an id, parameters, and a compound statement
  static final public void FuncDeclaration(Node parent) throws ParseException {
                                     Token i; Token l; Token r;
                Node id = new Node(parent, "");
                parent.addChild(id);
                Node params = new Node(id, "params");
                Node cs = new Node(id, "Compound Statement");
    TypeSpecifier(id);
    i = jj_consume_token(IDENTIFIER);
    l = jj_consume_token(29);
                id.setPayload(i.image);
                tokenList.add(new SyntaxToken("IDENTIFIER", i.image));
                tokenList.add(new SyntaxToken("LPAREN", l.image));
    Params(params);
    r = jj_consume_token(30);
                tokenList.add(new SyntaxToken("RPAREN", r.image));
                id.addChild(params);
                id.addChild(cs);
    CompoundStatement(cs);
  }

// Parameters are in a list
  static final public void Params(Node parent) throws ParseException {
                            Token v;
    if (jj_2_2(2147483647)) {
      jj_consume_token(VOID);
    } else {
      ParamList(parent);
    }
  }

// Defines the list of parameters
  static final public void ParamList(Node parent) throws ParseException {
                               Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case VOID:
      Param(parent);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        t = jj_consume_token(31);
                tokenList.add(new SyntaxToken("COMMA", t.image));
        ParamList(parent);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
  }

// a parameter has a type and a name
  static final public void Param(Node parent) throws ParseException {
                           Token i;
                Node child = new Node(parent, "");
                parent.addChild(child);
    TypeSpecifier(child);
    i = jj_consume_token(IDENTIFIER);
                child.setPayload(i.image);
                tokenList.add(new SyntaxToken("IDENTIFIER", i.image));
  }

// A Compound Statement is a set of local declarations and statements enclosed in parenthesis
  static final public void CompoundStatement(Node parent) throws ParseException {
                                       Token l; Token r;
    l = jj_consume_token(32);
                tokenList.add(new SyntaxToken("LBRACKET", l.image));
                Node ld = new Node(parent, "Local Declarations");
                Node sl = new Node(parent, "Statement List");
                parent.addChild(ld);
                parent.addChild(sl);
    LocalDeclarations(ld);
    StatementList(sl);
    r = jj_consume_token(33);
                tokenList.add(new SyntaxToken("RBRACKET", r.image));
  }

// Variable declarations
  static final public void LocalDeclarations(Node parent) throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case VOID:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      VarDeclaration(parent);
    }
  }

// List of statements
  static final public void StatementList(Node parent) throws ParseException {
    label_4:
    while (true) {
      Statement(parent);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case CONTINUE:
      case RETURN:
      case WHILE:
      case BREAK:
      case IF:
      case GOTO:
      case INT:
      case VOID:
      case IDENTIFIER:
      case 28:
      case 29:
      case 32:
      case 35:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
    }
  }

// Defines the various types of statements
  static final public void Statement(Node parent) throws ParseException {
    if (jj_2_3(2)) {
      LabeledStatement(parent);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case INT:
      case VOID:
      case IDENTIFIER:
      case 28:
      case 29:
      case 35:
        ExpressionStatement(parent);
        break;
      case 32:
        CompoundStatement(parent);
        break;
      case IF:
        SelectionStatement(parent);
        break;
      case WHILE:
        IterationStatement(parent);
        break;
      case CONTINUE:
      case RETURN:
      case BREAK:
      case GOTO:
        JumpStatement(parent);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// Labels for goto
  static final public void LabeledStatement(Node parent) throws ParseException {
                                      Token i; Token c;
                Node id = new Node(parent, "");
                parent.addChild(id);
    i = jj_consume_token(IDENTIFIER);
    c = jj_consume_token(34);
                id.setPayload(i.image);
                tokenList.add(new SyntaxToken("IDENTIFIER", i.image));
                tokenList.add(new SyntaxToken("COLON", c.image));
    Statement(id);
  }

// Expression Statements
  static final public void ExpressionStatement(Node parent) throws ParseException {
                                         Token s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case INT:
    case VOID:
    case IDENTIFIER:
    case 29:
    case 35:
      Expression(parent);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    s = jj_consume_token(28);
         tokenList.add(new SyntaxToken("SEMICOLON", s.image));
  }

//Selection Statements (if else)
  static final public void SelectionStatement(Node parent) throws ParseException {
                                        Token i; Token l; Token r; Token e;
                Node ifTok = new Node(parent, "if");
                Node ifExp = new Node(ifTok, "ifCondition");
                Node ifStmt = new Node(ifTok, "ifStatement");
                parent.addChild(ifTok);
                ifTok.addChild(ifExp);
                ifTok.addChild(ifStmt);
    i = jj_consume_token(IF);
    l = jj_consume_token(29);
                tokenList.add(new SyntaxToken("IF", i.image));
                tokenList.add(new SyntaxToken("LPAREN", l.image));
    Expression(ifExp);
    r = jj_consume_token(30);
    Statement(ifStmt);
                tokenList.add(new SyntaxToken("RPAREN", r.image));
                Node elseTok = new Node(parent, "else");
                Node elseStmt = new Node(elseTok, "elseStatement");
    if (jj_2_4(2)) {
      e = jj_consume_token(ELSE);
      Statement(elseStmt);
                ifTok.addChild(elseTok);
                elseTok.addChild(elseStmt);
                tokenList.add(new SyntaxToken("ELSE", e.image));
    } else {
      ;
    }
  }

// Iteration (while)
  static final public void IterationStatement(Node parent) throws ParseException {
                                        Token w; Token l; Token r;
                Node whileTok = new Node(parent, "while");
                Node whileCond = new Node(whileTok, "whileCondition");
                Node whileStmt = new Node(whileTok, "whileStatement");
                parent.addChild(whileTok);
                whileTok.addChild(whileCond);
                whileTok.addChild(whileStmt);
    w = jj_consume_token(WHILE);
    l = jj_consume_token(29);
                tokenList.add(new SyntaxToken("WHILE", w.image));
                tokenList.add(new SyntaxToken("LPAREN", l.image));
    Expression(whileCond);
    r = jj_consume_token(30);
    Statement(whileStmt);
                tokenList.add(new SyntaxToken("RPAREN", r.image));
  }

//Various jumps (goto, continue, break, return)
  static final public void JumpStatement(Node parent) throws ParseException {
                                   Token t; Token id; Token s;
                Node jump = new Node(parent, "");
                parent.addChild(jump);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GOTO:
      t = jj_consume_token(GOTO);
      id = jj_consume_token(IDENTIFIER);
      s = jj_consume_token(28);
                jump.setPayload("GOTO");
                Node dest = new Node(jump, id.image);
                jump.addChild(dest);
                tokenList.add(new SyntaxToken("GOTO", t.image));
                tokenList.add(new SyntaxToken("IDENTIFIER", id.image));
                tokenList.add(new SyntaxToken("SEMICOLON", s.image));
      break;
    case CONTINUE:
      t = jj_consume_token(CONTINUE);
      s = jj_consume_token(28);
                jump.setPayload("Continue");
                tokenList.add(new SyntaxToken("CONTINUE", t.image));
                tokenList.add(new SyntaxToken("SEMICOLON", s.image));
      break;
    case BREAK:
      t = jj_consume_token(BREAK);
      s = jj_consume_token(28);
                jump.setPayload("Break");
                tokenList.add(new SyntaxToken("BREAK", t.image));
                tokenList.add(new SyntaxToken("SEMICOLON", s.image));
      break;
    case RETURN:
      t = jj_consume_token(RETURN);
                jump.setPayload("Return");
                tokenList.add(new SyntaxToken("RETURN", t.image));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case INT:
      case VOID:
      case IDENTIFIER:
      case 29:
      case 35:
        Expression(jump);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      s = jj_consume_token(28);
                tokenList.add(new SyntaxToken("SEMICOLON", s.image));
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Expression
  static final public void Expression(Node parent) throws ParseException {
                Node exp = new Node(parent, "Expression");
                parent.addChild(exp);
    if (jj_2_5(2147483647)) {
      Variable(exp);
      AssignmentOperator(exp);
      Expression(exp);
    } else if (jj_2_6(2147483647)) {
      Negation(exp);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case INT:
      case VOID:
      case IDENTIFIER:
      case 29:
        LogicalORExpression(exp);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }
